--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
   <div id="player-container"></div>
 
   <!-- import JavaScript -->
-  <script src="./fix.js"></script>
+  <script src="./script.js"></script>
 </body>
 </html>
