--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 
   <!-- container for all players -->
   <div id="player-container"></div>
+  <div id="player-detailcontainer"></div>
+
+  
 
   <!-- import JavaScript -->
   <script src="./script.js"></script>
