--- a/index.html
+++ b/index.html
@@ -1,24 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+  @import url('https://fonts.googleapis.com/css2?family=Outfit&family=Rowdies:wght@700&display=swap');
+</style>
+  </style>
+  <!-- import CSS -->
   <link rel="stylesheet" href="styles.css">
-  <title>PuppyBowl</title>
-</head>
-<body>
-    <h1>PuppyBowl</h1>
-  <!-- form to add new players -->
-  <div id="new-player-form"></div>
 
+  <title>PuppyBowl Players</title>
+</head>
+
+<body>
+<h1>PuppyBowl Players</h1>
+  <!-- form to add new players -->
+  <div id="new-player-form-container"></div>
   <!-- container for all players -->
   <div id="player-container"></div>
-  <div id="player-detailcontainer"></div>
 
-  
-
-  <!-- import JavaScript -->
-  <script src="./script.js"></script>
 </body>
+<script src="script.js"></script>
+
 </html>
